<resources>
  <string name="legacy_app_name">Phoenix (Testnet)</string>
  <string name="legacy_notification_channels_watcher_title">(Legacy) Background watcher</string>
  <string name="legacy_notification_channels_watcher_desc">Alerts you if you need to start the app. Should be high priority.</string>
  <string name="legacy_notification_pay_to_open_missed_title">(Legacy) Missed payment notifications</string>
  <string name="legacy_notification_pay_to_open_missed_desc">Notifies you when an incoming payment has failed because automatic on-the-fly channel creation has been disabled.</string>
  <string name="legacy_notification_headless_title">(Legacy) Phoenix running in background</string>
  <string name="legacy_notification_headless_desc">Notifies you that Phoenix is running in background. This happens when someone is sending you money and the app is not already started.</string>
  <string name="legacy_autocreate_generating">Creating your wallet…</string>
  <string name="legacy_autocreate_error">We could not create your wallet.\nReason: %1$s</string>
  <string name="legacy_restore_disclaimer_message">Do not import a seed that was NOT created by this application.\n\nAlso, make sure that you don\'t have another Phoenix wallet running with the same seed.</string>
  <string name="legacy_restore_disclaimer_checkbox">I understand.</string>
  <string name="legacy_restore_disclaimer_next">Next</string>
  <string name="legacy_restore_instructions">Your wallet\'s seed is a list of 12 english words.</string>
  <string name="legacy_restore_mnemonics_label">Use the keyboard below to enter the seed:</string>
  <string name="legacy_restore_in_progress">Restoring your wallet…</string>
  <string name="legacy_restore_import_button">Import</string>
  <string name="legacy_restore_error">This seed is invalid and cannot be imported.\n\nPlease try again</string>
  <string name="legacy_authprompt_title">Unlock to continue</string>
  <string name="legacy_authprompt_hard_negative">Cancel</string>
  <string name="legacy_authprompt_error_unsecure">Device is not secure (code: %1$d)</string>
  <string name="legacy_pindialog_title_default">Please enter your PIN</string>
  <string name="legacy_pindialog_pwd_placeholder" translatable="false">●●●●●●</string>
  <string name="legacy_pindialog_error">PIN code must be a 6 digits number.</string>
  <string name="legacy_pindialog_error_donotmatch">PIN codes do not match.</string>
  <string name="legacy_biometricprompt_title">Wallet is locked</string>
  <string name="legacy_biometricprompt_negative">Unlock with PIN</string>
  <string name="legacy_lipsum_short" translatable="false">Etiam porttitor egestas faucibus. Curabitur condimentum eros non ipsum elementum egestas.</string>
  <string name="legacy_lipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut facilisis lectus. Integer massa tellus, suscipit sit amet felis vitae, blandit consectetur dolor. Fusce volutpat id magna id vestibulum. Integer a erat lacinia, placerat risus a, fermentum justo. Etiam euismod tincidunt dolor vel posuere. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur non euismod dui. Morbi enim dui, blandit sed erat sit amet, porta pulvinar odio. Cras metus felis, vestibulum eu consequat vitae, consectetur quis nulla. Fusce vulputate, elit et luctus sodales, metus metus elementum sem, eget commodo nunc nunc in ex. Sed aliquam eros nibh, ac volutpat turpis accumsan vitae. Cras suscipit ipsum accumsan aliquam interdum.</string>
  <string name="legacy_lipsum_long" translatable="false">
    Praesent ut nisi fringilla, pharetra dui sit amet, ornare urna. Donec at ultrices nunc. Fusce gravida metus vitae viverra egestas. In hac habitasse platea dictumst. Proin consequat fringilla felis, vehicula vehicula turpis ullamcorper nec. Pellentesque urna massa, blandit cursus metus et, ultrices consectetur neque. Suspendisse hendrerit venenatis mi ac tincidunt. Morbi hendrerit orci vitae erat luctus, at dignissim turpis accumsan. Integer elementum est eu tincidunt ullamcorper. Phasellus varius porttitor vestibulum. Maecenas faucibus ullamcorper diam, ac commodo dui fringilla sed. Aliquam arcu velit, porta eu sem vel, rhoncus bibendum dolor.
    \nEtiam porttitor egestas faucibus. Curabitur condimentum eros non ipsum elementum egestas. Nam tempor euismod erat eget scelerisque. Integer sit amet laoreet erat. Duis enim turpis, vehicula eu justo vitae, dapibus auctor mauris. Aenean euismod eleifend dui a aliquet. Aliquam eleifend malesuada tortor ornare volutpat. In augue tortor, gravida et volutpat elementum, iaculis non sapien. Etiam dolor nisi, pulvinar a rhoncus ac, eleifend ac libero. In lobortis enim vitae ultricies viverra. Maecenas accumsan elementum sem, nec pharetra urna maximus maximus.
    \nIn sit amet volutpat ligula, ac pretium dolor. Phasellus posuere rhoncus magna quis fermentum. Ut risus turpis, fermentum facilisis mollis in, porttitor eget erat. Donec luctus egestas ligula et interdum. Phasellus vitae hendrerit sem, at vehicula nulla. Curabitur mollis risus quis metus euismod ullamcorper. Nam eu aliquet mi. Duis id urna ac urna iaculis blandit. Morbi eros dui, congue a posuere efficitur, imperdiet a nisi. Morbi non orci non lorem aliquet tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar, mi vitae sollicitudin dignissim, nunc urna facilisis massa, ut scelerisque mi felis in sapien.
    \nNam felis felix, tristique commodo odio eget, imperdiet viverra erat. Donec venenatis magna pulvinar, finibus leo id, gravida augue. Integer ante leo, bibendum ac nibh quis, auctor commodo quam. Sed luctus vitae quam vel condimentum. Mauris eu rhoncus mauris. Fusce enim diam, consequat a odio sit amet, accumsan cursus nisl. Etiam lectus nunc, lacinia id purus sit amet, pulvinar auctor odio. Maecenas vitae arcu sit amet est cursus maximus. Nullam ac sapien non nibh tempor rhoncus. Mauris dignissim cursus libero quis egestas.
  </string>
  <string name="legacy_startup_unlock_required">Phoenix is locked.\nPlease authenticate to continue.</string>
  <string name="legacy_startup_unlock_button">Unlock</string>
  <string name="legacy_startup_binding_service">Binding service…</string>
  <string name="legacy_startup_wait">Loading…</string>
  <string name="legacy_startup_wait_tor">Starting Tor…</string>
  <string name="legacy_startup_start_button">Restart</string>
  <string name="legacy_startup_settings_button">Settings</string>
  <string name="legacy_startup_error_generic">The application could not start.\n\nError details: %1$s</string>
  <string name="legacy_startup_error_electrum_address">The application could not start. The address of the custom Electrum server is not valid.\n\nGo to Settings > Electrum to fix your settings.</string>
  <string name="legacy_startup_error_tor">The Tor service could not start. Check that your connection is working and try again.\n\nError details: %1$s</string>
  <string name="legacy_startup_error_unreadable">Wallet data could not be read, please restart the application</string>
  <string name="legacy_startup_error_network">Your internet connection is not working. Please check your WiFi or cellular network.</string>
  <string name="legacy_startup_error_wrong_pwd">PIN is incorrect</string>
  <string name="legacy_startup_error_biometrics">Biometric authentication has failed.</string>
  <string name="legacy_startup_error_no_biometrics_or_key_invalidated">Enroll a fingerprint in Android first to unlock the wallet.\n\nOtherwise, restore your wallet using your 12-words seed backup.</string>
  <string name="legacy_startup_error_auth_failed">Authentication failed.</string>
  <string name="legacy_startup_error_auth_failed_with_details">Authentication failed.\n—\n%1$s</string>
  <string name="legacy_paymentholder_sending">Sending…</string>
  <string name="legacy_paymentholder_processing">Processing…</string>
  <string name="legacy_paymentholder_waiting">Waiting…</string>
  <string name="legacy_paymentholder_failed">Failed</string>
  <string name="legacy_paymentholder_sent_prefix">-</string>
  <string name="legacy_paymentholder_received_prefix">+</string>
  <string name="legacy_paymentholder_no_desc">No description</string>
  <string name="legacy_paymentholder_closing_desc">Closing #%1$s</string>
  <string name="legacy_paymentholder_swap_in_desc">On-chain payment to %1$s</string>
  <string name="legacy_receive_edit_title">Edit my invoice</string>
  <string name="legacy_receive_edit_subtitle">You can change the requested amount and the description of the invoice.</string>
  <string name="legacy_receive_in_progress_message">Please hold…</string>
  <string name="legacy_receive_error_message">There was an error when generating the invoice…\n\nPlease try again.</string>
  <string name="legacy_receive_amount_label">Amount (optional)</string>
  <string name="legacy_receive_desc_label">Payment description (optional)</string>
  <string name="legacy_receive_default_desc">Phoenix payment</string>
  <string name="legacy_receive_generate_button">Create invoice</string>
  <string name="legacy_receive_share_subject">Payment requested</string>
  <string name="legacy_receive_share_title">Share this payment request with…</string>
  <string name="legacy_receive_share_button">Share…</string>
  <string name="legacy_receive_min_amount_pay_to_open"><![CDATA[Your wallet is empty. First payment you receive must be at least <b>%1$s</b>.]]></string>
  <string name="legacy_listallchannels_copy">Copy</string>
  <string name="legacy_listallchannels_share">Share</string>
  <string name="legacy_listallchannels_funding_tx">Tx</string>
  <string name="legacy_listallchannels_funding_tx_desc">See funding transaction</string>
  <string name="legacy_listallchannels_close">Close</string>
  <string name="legacy_channel_loading">Retrieving channel data…</string>
  <string name="legacy_channel_error">Could not retrieve the details for this channel. Please try again later.</string>
  <string name="legacy_accessctrl_title">Security</string>
  <string name="legacy_accessctrl_subtitle">We recommend enabling the screen lock to prevent unintended use of your wallet.</string>
  <string name="legacy_accessctrl_auth_none_enrolled">Please enroll a PIN/Schema/Fingerprint in Android first.</string>
  <string name="legacy_accessctrl_screen_lock_switch">Screen lock</string>
  <string name="legacy_accessctrl_screen_lock_switch_desc">Lock access to the app with Android\'s screen lock/fingerprint</string>
  <string name="legacy_accessctrl_full_lock_switch">Prevent background execution</string>
  <string name="legacy_accessctrl_full_lock_switch_desc">App requires manual user unlock to run. Autonomous background payment reception is therefore not possible.\n\nOnly fingerprint authentication is supported. If your fingerprints are modified, you\'ll need to reinitialize Phoenix with your seed. Make sure to have a backup!</string>
  <string name="legacy_paymentsettings_trampoline_fees_dialog_override_default_checkbox">Override default fee for outgoing payments</string>
  <string name="legacy_paymentsettings_trampoline_fees_dialog_base_fee_label">Base fee (satoshi)</string>
  <string name="legacy_paymentsettings_trampoline_fees_dialog_base_fee_hint">Enter a base fee in satoshi</string>
  <string name="legacy_paymentsettings_trampoline_fees_dialog_proportional_fee_label">Proportional fee (%)</string>
  <string name="legacy_paymentsettings_trampoline_fees_dialog_proportional_fee_hint">Enter a proportional fee in %</string>
  <string name="legacy_paymentmode_onchain">Pay on-chain</string>
  <string name="legacy_paymentmode_onchain_desc">On-chain transactions are typically slower and more expensive</string>
  <string name="legacy_paymentmode_lightning">Pay with Lightning</string>
  <string name="legacy_paymentmode_lightning_desc">This is the recommended option</string>
</resources>