<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="fr.acinq.phoenix.legacy.settings.AccessLockState" />

    <variable
      name="model"
      type="fr.acinq.phoenix.legacy.settings.AccessControlViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".legacy.settings.AccessControlFragment">

    <fr.acinq.phoenix.legacy.utils.customviews.ActionBarView
      android:id="@+id/action_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:subtitle="@string/legacy_accessctrl_subtitle"
      app:title="@string/legacy_accessctrl_title" />

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:fillViewport="true"
      app:layout_constrainedHeight="true"
      app:layout_constraintTop_toBottomOf="@id/action_bar">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/square_border_hz">

        <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
          android:id="@+id/soft_auth_unavailable"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/button_bg_square"
          android:visibility="@{!model.canUseSoftAuth}"
          app:icon="@drawable/ic_alert_triangle"
          app:layout_constraintTop_toTopOf="parent"
          app:text="@string/legacy_accessctrl_auth_none_enrolled" />

        <fr.acinq.phoenix.legacy.utils.customviews.SwitchView
          android:id="@+id/screen_lock_switch"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="@{model.canUseSoftAuth}"
          app:enableOrFade="@{!(model.isUpdatingState || model.state instanceof AccessLockState.Done.FullLock)}"
          app:icon="@drawable/ic_lock"
          app:layout_constraintTop_toBottomOf="@id/soft_auth_unavailable"
          app:subtitle="@string/legacy_accessctrl_screen_lock_switch_desc"
          app:text="@string/legacy_accessctrl_screen_lock_switch" />

        <fr.acinq.phoenix.legacy.utils.customviews.SwitchView
          android:id="@+id/full_lock_switch"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="gone"
          app:enableOrFade="@{!model.isUpdatingState}"
          app:icon="@drawable/ic_shield"
          app:layout_constraintTop_toBottomOf="@id/screen_lock_switch"
          app:subtitle="@string/legacy_accessctrl_full_lock_switch_desc"
          app:text="@string/legacy_accessctrl_full_lock_switch"
          tools:layout_editor_absoluteX="0dp" />

      </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
