<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
    android:id="@+id/paymode_onchain_button"
    android:layout_width="match_parent"
    android:background="@drawable/button_bg_square"
    android:padding="@dimen/space_lg"
    android:layout_height="wrap_content"
    app:hz_bias="0"
    app:icon="@drawable/ic_chain"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:spacer_size="@dimen/space_md_p"
    app:subtitle="@string/legacy_paymentmode_onchain_desc"
    app:text="@string/legacy_paymentmode_onchain" />

  <View
    android:id="@+id/paymode_sep"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    style="@style/HLineSeparator"
    app:layout_constraintTop_toBottomOf="@id/paymode_onchain_button" />

  <fr.acinq.phoenix.legacy.utils.customviews.ButtonView
    android:id="@+id/paymode_lightning_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_bg_square"
    android:padding="@dimen/space_lg"
    app:hz_bias="0"
    app:icon="@drawable/ic_zap"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/paymode_sep"
    app:spacer_size="@dimen/space_md_p"
    app:subtitle="@string/legacy_paymentmode_lightning_desc"
    app:text="@string/legacy_paymentmode_lightning" />

</androidx.constraintlayout.widget.ConstraintLayout>
