<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 ACINQ SAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:padding="@dimen/space_md"
    android:layout_height="wrap_content">

    <CheckBox
      android:id="@+id/trampoline_fee_override_default_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/legacy_paymentsettings_trampoline_fees_dialog_override_default_checkbox"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/trampoline_fee_max_base_fee_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space_md"
      android:layout_marginStart="@dimen/space_sm"
      android:text="@string/legacy_paymentsettings_trampoline_fees_dialog_base_fee_label"
      android:textColor="?attr/colorPrimary"
      android:textSize="@dimen/text_md"
      app:layout_constraintTop_toBottomOf="@id/trampoline_fee_override_default_checkbox" />

    <EditText
      android:id="@+id/trampoline_fee_max_base_fee_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space_xxs"
      android:layout_marginStart="@dimen/space_sm"
      android:maxLength="10"
      android:inputType="number"
      android:textSize="@dimen/text_lg"
      android:hint="@string/legacy_paymentsettings_trampoline_fees_dialog_base_fee_hint"
      android:importantForAutofill="no"
      app:layout_constraintTop_toBottomOf="@id/trampoline_fee_max_base_fee_label" />

    <TextView
      android:id="@+id/trampoline_fee_max_proportional_fee_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space_md"
      android:layout_marginStart="@dimen/space_sm"
      android:text="@string/legacy_paymentsettings_trampoline_fees_dialog_proportional_fee_label"
      android:textColor="?attr/colorPrimary"
      android:textSize="@dimen/text_md"
      app:layout_constraintTop_toBottomOf="@id/trampoline_fee_max_base_fee_value" />

    <EditText
      android:id="@+id/trampoline_fee_max_proportional_fee_value"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space_xxs"
      android:inputType="number|numberDecimal"
      android:layout_marginStart="@dimen/space_sm"
      android:textSize="@dimen/text_lg"
      android:hint="@string/legacy_paymentsettings_trampoline_fees_dialog_proportional_fee_hint"
      android:importantForAutofill="no"
      app:layout_constraintTop_toBottomOf="@id/trampoline_fee_max_proportional_fee_label" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
